<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/connection_text_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/connection_text_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/connection_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_connected_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/color_orange" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/connection_button_details_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/connection_text_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection_detail_block">

            <LinearLayout
                android:id="@+id/after_connection_detail_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/after_connection_image1"
                        android:layout_width="@dimen/size_20"
                        android:layout_height="@dimen/size_20"
                        android:src="@drawable/ic_protection_icon" />

                    <TextView
                        android:id="@+id/after_connection_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_are_connected_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/after_connection_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_your_ip_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/connection_ip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/dummy_ip_text"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:id="@+id/vpn_connection_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/connection_time_bg"
                    android:paddingStart="12dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="4dp"
                    android:text="@string/dummy_time_text"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/connection_button_block"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_start" />

        <TextView
            android:id="@+id/tv_con_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Tap to Connect" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/server_selection_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/country_selection_back"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/llAds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connection_text_block">

            <ImageView
                android:id="@+id/server_flag_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_server_flag_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/server_flag_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/country_name"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/server_flag_des"
                app:layout_constraintStart_toEndOf="@+id/server_flag_image"
                app:layout_constraintTop_toTopOf="@+id/server_flag_image" />

            <TextView
                android:id="@+id/server_flag_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IP_address"
                android:textSize="12dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/server_flag_image"
                app:layout_constraintStart_toStartOf="@+id/server_flag_name"
                app:layout_constraintTop_toBottomOf="@+id/server_flag_name" />

            <TextView
                android:id="@+id/server_flag_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/change_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/server_flag_extend"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/server_flag_extend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:src="@drawable/ic_arrow_right_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/main_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_upload_24" />

                <TextView
                    android:id="@+id/upload_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_6"
                    android:layout_marginEnd="@dimen/size_18"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/zero_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_download_24" />

                <TextView
                    android:id="@+id/download_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_18"
                    android:layout_marginEnd="@dimen/size_6"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/zero_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    </LinearLayout>


</LinearLayout>